Replace LinkedList with CopyOnWriteArrayList in Playlist to fix concurrent iteration
Playlist used a LinkedList<Track> which is not thread-safe. When LongPollControllerV3
calls hashCode() (via Status.summaryHasChanged) while another thread modifies the
playlist, Java's fail-fast LinkedList iterator throws ConcurrentModificationException.

CopyOnWriteArrayList iterates over a stable snapshot, making hashCode() safe to call
concurrently with any mutation. The copy-on-write cost is acceptable here since
reads (long-poll checks) far outnumber writes (track add/remove).

LinkedList-specific method calls updated to List equivalents:
- addFirst(track) -> add(0, track)
- removeFirst() -> remove(0)
- getFirst() -> get(0)
- while(remove(track)){} -> removeIf(t -> t.equals(track))

Fixes #151